--- a/src/pages/Admin/JobsManagement/style.css
+++ b/src/pages/Admin/JobsManagement/style.css
@@ -18,7 +18,8 @@
   color: #1f2937;
 }
 
- .admin-management-container .ant-table-pagination {
-  justify-content: center;
+ .admin-management-container .ant-table-wrapper .ant-table-pagination {
+  justify-content: center !important;
+  width: 100%;
   margin: 16px 0 0;
  }
